Correcting spacing for nav element

--- a/src/Styles/LandingScreen.css
+++ b/src/Styles/LandingScreen.css
@@ -40,12 +40,23 @@ h1 {
   font-size: 20px;
 }
 
+.nav-element {
+  position: absolute;
+  top: 100%; /* Start with vertical center */
+  right: 100px; /* Distance from the right side */
+  transform: translateY(-50%); /* Adjust to be perfectly centered vertically */
+  width: auto;
+  padding: 20px;
+}
+
 .nav {
   position: relative;
+  height: calc(
+    100vh - 80px
+  ); /* Adjust height to leave space at the top and bottom */
   display: flex;
-  justify-content: flex-end; /* Align items to the right */
-  align-items: center; /* Center items vertically */
-  height: 100vh; /* Full viewport height */
+  align-items: center; /* Center content vertically within the adjusted height */
+  justify-content: center;
 }
 
 .robot-img {
@@ -58,14 +69,4 @@ h1 {
   position: absolute;
   top: 100px;
   height: 150px;
-}
-
-.nav-element {
-  position: fixed; /* Fixed positioning relative to the viewport */
-  top: 80%; /* Align to the middle of the screen */
-  right: 0; /* Align to the right edge of the screen */
-  transform: translateY(-50%); /* Adjust the top value for perfect centering */
-  width: auto; /* Auto width based on content */
-  border: 1px solid red; /* Optional: Visualize the boundary */
-  z-index: 1000; /* Ensure it's above other elements */
 }
